[package]
authors = ["Makito Yu <makito.yu@konghq.com>", "Kong Contributors"]
description = """
WebAssembly bindings for ATC Router
"""
edition = "2021"
exclude = ["/examples", "/pkg"]
name = "atc-router-wasm"
repository = "https://github.com/Kong/atc-router-wasm"
version = "1.2.0"

[dependencies]
atc-router = {git = "https://github.com/Kong/atc-router.git", branch = "feat/serde", default-features = false, features = ["serde"]}
pest = "2.7.2"
serde = {version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.4"
uuid = "1.4"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
