[package]
authors = ["Makito Yu <makito.yu@konghq.com>", "Kong Contributors"]
description = "WebAssembly bindings for ATC Router"
edition = "2021"
exclude = ["/examples", "/pkg"]
name = "atc-router-wasm"
repository = "https://github.com/Kong/atc-router-wasm"
version = "1.3.1"

[dependencies]
atc-router = {version = "1.3.1", default-features = false, features = ["serde"]}
pest = "2.7"
serde = {version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.4"
uuid = "1.5"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
